# Contextual-Multi-Armed-Bandit

./: .gitignore  README.md  pyproject.toml  teste.py
dataset/processed/: binarizer_num.pkl  encoder_cols_context.pkl  features_importantes.pkl  preprocessor.pkl
notebook/: 00_Carregar_Feature_Engineering.ipynb  00_Create_Dataset.ipynb  01_Analise_Processamento.ipynb  01_Simulacao_CMAB.ipynb  02_Simulacao_CMAB copy.ipynb  02_Simulacao_CMAB.ipynb
